k8s/apps/monitoring/manifests/goldpinger/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: goldpinger
  namespace: monitoring
  labels:
    app: goldpinger
    app.kubernetes.io/name: goldpinger
spec:
  ports:
    - port: 8080
      targetPort: http
      name: http
  selector:
    app: goldpinger
    app.kubernetes.io/name: goldpinger
