k8s/apps/monitoring/manifests/goldpinger/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01
    item.homer.rajsingh.info/name: "Goldpinger"
    item.homer.rajsingh.info/subtitle: "Cluster connectivity checker"
    item.homer.rajsingh.info/logo: "https://avatars.githubusercontent.com/u/1416818?s=200&v=4"
    item.homer.rajsingh.info/tag: "local"
    item.homer.rajsingh.info/tagstyle: "is-success"
    item.homer.rajsingh.info/order: "60"
    service.homer.rajsingh.info/name: "Administration"
    service.homer.rajsingh.info/icon: "fa fa-user-shield"
    service.homer.rajsingh.info/order: "10"
  labels:
    homer.rajsingh.info/enabled: "true"
  name: goldpinger
  namespace: monitoring
spec:
  ingressClassName: private
  rules:
    - host: goldpinger.ankhmorpork.thaum.xyz
      http:
        paths:
          - backend:
              service:
                name: goldpinger
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - goldpinger.ankhmorpork.thaum.xyz
      secretName: goldpinger-ankhmorpork-thaum-xyz-tls
